--- a/clase10/desafio08/views/partials/formulario.pug
+++ b/clase10/desafio08/views/partials/formulario.pug
@@ -3,7 +3,7 @@
         div(class="jumbotron")
             h1(style="color:blue;") Ingrese datos
             br
-            form(action="/productos" method="post")
+            form(action="/api/productos" method="post")
                 div(class="form-group")
                     label(for="title")
                         b Title
