--- a/clase10/desafio-08-pug/views/productos.pug
+++ b/clase10/desafio-08-pug/views/productos.pug
@@ -1,6 +1,6 @@
 extends layouts/main
 
-block index
+block productos
     div( class="container mt-3")
         include partials/formulario
         include partials/historial
