--- a/clase10/desafio-08-pug/views/partials/nav.pug
+++ b/clase10/desafio-08-pug/views/partials/nav.pug
@@ -4,4 +4,4 @@ header
             li 
                 a(href="/") Home 
             li 
-                a(href="/api/productos") Productos
+                a(href="/productos") Productos
