commit para arreglar problemas de git

--- a/clase 14-primer entrega/views/productos.pug
+++ b/clase 14-primer entrega/views/productos.pug
@@ -1,6 +1,6 @@
 extends layouts/main
 
-block productosHistorial
+block productos
     div( class="container mt-3")
         include partials/formulario
         include partials/historial
