--- a/clase12-webSockets/desafio-12-webSocket/views/productos.pug
+++ b/clase12-webSockets/desafio-12-webSocket/views/productos.pug
@@ -2,5 +2,6 @@ extends layouts/main
 
 block productos
     div( class="container mt-3")
-        include partials/formulario
-        //- include partials/historial
+        include partials/formularioWebSockets
+        include partials/historialWebSockets
+        include partials/chat
