--- a/clase10/desafio-08-ejs/views/index.ejs
+++ b/clase10/desafio-08-ejs/views/index.ejs
@@ -8,17 +8,20 @@
     <title>Registro</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 
 <body>
-    <div class="container mt-3">
-        <div class="jumbotron">
-            <!-- Formulario -->
-            <%- include('./partials/formulario') %>
-                <!-- Historial -->
-                <%- include('./partials/historial') %>
+    <%- include('./partials/nav.ejs') %>
+        <div class="container mt-3">
+            <div class="jumbotron">
+                <!-- Formulario -->
+                <%- include('./partials/formulario') %>
+                    <!-- Historial -->
+                    <%- include('./partials/historial') %>
+            </div>
         </div>
-    </div>
 </body>
 
 </html>
