--- a/clase10/desafio-08-ejs/views/partials/formulario.ejs
+++ b/clase10/desafio-08-ejs/views/partials/formulario.ejs
@@ -2,7 +2,7 @@
 <div class="jumbotron">
     <h1 style="color:blue;">Ingrese datos</h1>
     <br>
-    <form action="/api/productos" method="post">
+    <form action="/productos" method="post">
         <div class="form-group">
             <label for="title"><b>Title</b></label>
             <input id="title" class="form-control" type="text" name="title" onchange="">
