arreglo web sockets

--- a/clase12-webSockets/desafio-12-webSocket/views/partials/formularioWebSockets.pug
+++ b/clase12-webSockets/desafio-12-webSocket/views/partials/formularioWebSockets.pug
@@ -3,7 +3,7 @@
         div(class="jumbotron")
             h1(style="color:blue;") Ingrese datos
             br
-            form
+            form(action="javascript:enviarProducto()")
                 div(class="form-group")
                     label(for="title")
                         b Title
