--- a/clase 14-primer entrega/views/partials/nav.pug
+++ b/clase 14-primer entrega/views/partials/nav.pug
@@ -4,4 +4,4 @@ header
             li 
                 a(href="/") Home 
             li 
-                a(href="/productos") Productos
+                a(href="/api/productos") Productos
