--- a/clase22 - Mocks/views/layouts/main.pug
+++ b/clase22 - Mocks/views/layouts/main.pug
@@ -17,6 +17,6 @@ html(lang="en")
         //- script(type='module').
         //- script(src='/socket.io/socket.io.js')
         script(src='https://cdn.socket.io/3.1.3/socket.io.min.js' integrity='sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh' crossorigin='anonymous')
+        script(src='https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js')
         script(src='main.js')
-        
 
